--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+h1 {
+    font-family: 'Racing Sans One', sans-serif;
+    background-color: cornflowerblue;
+    color: white;
+    text-align: center;
+}
+
+p {
+    width: 60%;
+    margin: auto;
+    text-align: justify;
+    text-justify: inter-word;
+    line-height: 1.6;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+
+.gallery {
+    margin: 50px auto 0;
+}
+
+#solution {
+    background-color: lightgray;
+}
+
 .gallery td {
     height: 50px;
     width: 50px;
@@ -37,21 +62,32 @@
     -moz-appearance: textfield;
 }
 
-h1 {
-    font-family: 'Racing Sans One', sans-serif;
-    background-color: cornflowerblue;
-    color: white;
-    text-align: center;
+#loading-spinner {
+    border: 16px solid lightgray;
+    border-radius: 50%;
+    border-top: 16px solid cornflowerblue;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 1.5s linear infinite; /* Safari */
+    animation: spin 1.5s linear infinite;
 }
 
-p {
-    width: 60%;
-    margin: auto;
-    text-align: justify;
-    text-justify: inter-word;
-    line-height: 1.6;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+#solution-section {
+    margin-bottom: 100px;
+}
+
+#solution-text p {
+    text-align: center;
 }
 
 #control-stripe {
@@ -124,8 +160,4 @@ p {
 
 #controls > div.button-control > button:active {
     background-color: #154eb7;
-}
-
-#input .gallery {
-    margin: 50px auto 0;
 }
