--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ p {
 }
 
 #solution-section {
-    margin-bottom: 100px;
+    margin-bottom: 75px;
 }
 
 #solution-text p {
@@ -165,4 +165,24 @@ p {
 
 #controls > div.button-control > button:active {
     background-color: #154eb7;
+}
+
+div.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+div.footer a {
+    color: cornflowerblue;
+    text-align: center;
+    text-decoration: underline 2px cornflowerblue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+div.footer a:hover {
+    color: #154eb7;
+    text-decoration: none;
 }
